--- a/style.css
+++ b/style.css
@@ -49,14 +49,14 @@ body {
 }
 
 .left h1 {
-    color: white;
+    color: #f9faf8;
     font-size: 2.5rem;
     margin: 0;
 }
 
 .left p {
     font-size: 1rem;
-    color: #d1d5db;
+    color: #e5e7eb;
 }
 
 .right .image-container {
@@ -68,7 +68,7 @@ body {
 }
 
 .button button {
-    background-color: #2563eb;
+    background-color: #3882f6;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -78,4 +78,67 @@ body {
 
 .button button:hover {
     background-color: #1d4ed8;
+}
+
+
+.info-container {
+  min-height: 500px;
+}
+.info-boxes {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+h2{
+    font-size: 32px;
+    color: #1f2937;
+    margin: 30px 0;
+    text-align: center;
+}
+
+.image-container {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 20px;
+  width: 180px;
+}
+
+.image {
+    width: 180px;
+    height: 180px;
+    border: 5px solid #3882f6;
+    border-radius: 20px;
+}
+.text{
+    text-align: center;
+}
+.testimonial-section {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-weight: light;
+    padding: 18px;
+    flex-direction: column;
+
+
+}
+.testimonial 
+{
+    font-style: italic;
+}
+.author{
+    align-self: flex-end;
+}
+.footer {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
