--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .header .logo {
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: bold;
 }
 
@@ -50,12 +50,12 @@ body {
 
 .left h1 {
     color: #f9faf8;
-    font-size: 2.5rem;
+    font-size: 48px;
     margin: 0;
 }
 
 .left p {
-    font-size: 1rem;
+    font-size: 18px;
     color: #e5e7eb;
 }
 
@@ -134,30 +134,38 @@ h2{
 }
 .signup {
     display: flex;
+    align-items: center;
     background: #3882f6;
     justify-content: center;
-    flex: 1;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
+    padding: 10px;
+    margin: 20px auto;
     border-radius: 4px;
-    color: #F9FAF8;
-
+    color: #f9faf8;
+    gap: 10px;
+    font-size: 14px; 
+    width: 700px;
+    height:150px;
 }
-.signup-quote{
+
+.signup-quote {
     flex: 1;
     align-self: center;
-    color: #F9FAF8;
+    color: #f9faf8;
+    flex-direction: column;
+    font-size: 14px; /* Adjust the font size */
 }
-.signupbutton{
-    color:#F9FAF8;
+
+.signupbutton {
+    color: #f9faf8;
     background: #3882f6;
     border-radius: 5px;
-    border-color: #F9FAF8;
+    border-color: #f9faf8;
     flex-shrink: 0;
     font-weight: 400;
-    border:  light 2px;
-    padding: 0 18px;
+    border: light 2px;
+    padding: 5px 10px; 
+    font-size: 14px; 
+    
 }
 .footer {
     background-color: #1f2937;
